--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,10 @@
-import tensorflow as tf
-import numpy as np
-import cv2
-import random
-from tensorflow.keras.models import Sequential
-from tensorflow.keras.layers import Conv2D, MaxPooling2D, GlobalAveragePooling2D, Dense, Dropout, BatchNormalization, Input, MaxPool2D, Flatten
-from tensorflow.keras.optimizers import Adam
-import os
-import random
-from collections import defaultdict
-from sklearn.metrics import confusion_matrix, classification_report, recall_score
-import matplotlib.pyplot as plt
-import seaborn as sns
-from sklearn.metrics import roc_curve, auc, confusion_matrix, classification_report, recall_score
-
-import cv2
-import numpy as np
-import tensorflow as tf
-import dlib
-from scipy.spatial import distance
-import time
-from collections import deque
+tensorflow
+numpy
+opencv-python
+scikit-image
+scikit-learn
+joblib 
+matplotlib 
+seaborn
+dlib
+scipycod
